# platforms_server

./: CMakeLists.txt  package.xml  setup.py
config/: mqtt.config  robot.config  robot_config.yaml  vision.config  vision_config.yaml
include/vrep_scene/: PathPlanning.ttt  PathPlanning_v2.ttt
launch/: for_paper.launch  full_test.launch  full_test_with_parallel_connection.launch  full_test_with_t_connection.launch  start.launch  start_robot_movement.launch  start_with_vrep.launch  test_connection_path.launch  test_ik.launch  test_parallel_connection.launch  test_random_sectors_path.launch  test_set_path.launch  test_t_connection.launch
msg/: All_Ik_MSGS.msg  ArucoData.msg  IK_Data.msg  MarkerData.msg  Path.msg  Point2d.msg  RobotData.msg  RobotSide.msg  Wheel.msg  Wheels_pair.msg  XML_PATH.msg
nodes/: aruco_detector_node.py  camera_node.py  fine_tune_node.py  markers_analizer_node.py  mqtt_node.py  parallel_connection_node.py  path_planner_node.py  robot_motion_node.py  t_connection_node.py  test_connection_node.py  test_ik_sensor.py  test_parallel_connection_node.py  test_set_path.py  test_t_connection_node.py  visualizer_node.py  vrep_communicator_node.py
src/constants/: mqtt_constants.py  robot_constants.py  vision_constants.py
src/mqtt_utils/: mqtt_constants.py  mqtt_utils.py
src/path_planner/: Planner.py  planner_constants.py
src/vision/: 960x720_web_cam.npz  Connection.py  Fileds_objects.py  MarkersAnalizer.py  geometry_utils.py  vision_constants.py
src/visualize_utils/: Visualizer.py
src/vrep_communicator/: VrepCommunicator.py  vrep_constants.py
