<?xml version="1.0"?>
<package format="2">
  <name>platforms_server</name>
  <version>0.1.0</version>
  <description>The platforms_server package</description>

  <maintainer email="tolstoy.i.m@yandex.ru">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>platforns_server</build_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>platforns_server</exec_depend>

  <export>

  </export>
</package>
